--- a/ui/app.less
+++ b/ui/app.less
@@ -1,15 +1,3 @@
-@media (prefers-color-scheme: dark) {
-    body {
-        color: #fff;
-    }
-}
-
-@media (prefers-color-scheme: light) {
-    body {
-        color: #000;
-    }
-}
-
-.hello {
-    font-size: 24px;
+#app {
+  height: 100vh;
 }
